<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id = "@+id/myMenu"
	tools:context="com.example.superlottopicker">


	<item
		android:id="@+id/menu_generateLottoNumbers"
		android:title="@string/generate_lotto_numbers"
		android:orderInCategory="100"
		android:enabled="true"
		android:visible="true"/>

	<item
		android:id="@+id/menu_pastLottoNumbers"
		android:title="@string/past_numbers"
		android:orderInCategory="102"
		android:enabled="true"
		android:visible="true"
		app:showAsAction="never" />

	<item
		android:id="@+id/menu_numberQuery"
		android:orderInCategory="104"
		android:enabled="true"
		android:title="@string/frequency_numbers"
		android:visible="true" />


	<item
		android:id="@+id/menu_uploadToServer"
		android:orderInCategory="106"
		android:title="@string/upload_lotto_numbers_to_server"
		android:enabled="false"
		android:visible="true" />

	<item
		android:id="@+id/menu_downloadFromServer"
		android:orderInCategory="106"
		android:enabled="true"
		android:title="@string/download_from_server"
		android:visible="true" />
	<item
		android:id="@+id/menu_deleteDataFromServer"
		android:orderInCategory="108"
		android:enabled="false"
		android:title="@string/delete_all_data_from_server"
		android:visible="true" />
</menu>
